--- a/BLAZAMGui/UI/AppModal.razor
+++ b/BLAZAMGui/UI/AppModal.razor
@@ -9,7 +9,7 @@
     </TitleContent>
     <DialogContent>
         <CascadingValue Value="this">
-            <MudContainer Class="py-4 px-0">
+            <MudContainer MaxWidth=MaxWidth.ExtraExtraLarge Class="py-4 px-0">
                 @if (IsShown)
                 {
                     @ChildContent
