--- a/BLAZAMGui/_Imports.razor
+++ b/BLAZAMGui/_Imports.razor
@@ -13,6 +13,7 @@
 @using BLAZAM.ActiveDirectory.Interfaces
 @using BLAZAM.ActiveDirectory.Adapters;
 @using BLAZAM.ActiveDirectory.Searchers;
+@using BLAZAM.ActiveDirectory.Data
 
 @using BLAZAM.Localization;
 @using BLAZAM.Themes;
