Apply edit permissions to LogonHours

--- a/BLAZAMGui/UI/Users/LogonHoursModalContent.razor
+++ b/BLAZAMGui/UI/Users/LogonHoursModalContent.razor
@@ -3,66 +3,66 @@
 <MudContainer MaxWidth="MaxWidth.ExtraExtraLarge">
     @if (User.CanEditField(ActiveDirectoryFields.LogonHours))
     {
-                <MudSimpleTable Dense=true Hover="true">
-                    <thead>
-                        <tr>
-                            <th>@AppLocalization["Day"]</th>
-                            @foreach (var hour in Enumerable.Range(0, 24))
+        <MudSimpleTable Dense=true Hover="true">
+            <thead>
+                <tr>
+                    <th>@AppLocalization["Day"]</th>
+                    @foreach (var hour in Enumerable.Range(0, 24))
+                    {
+
+                        <th class="ma-0 pa-0 d-grid" style="min-width:20px;">
+                            @*    @if (hour % 2 == 0)
+                    { *@
+                            @if (hour == 0 || hour == 12)
                             {
-
-                                <th class="ma-0 pa-0 d-grid" style="min-width:20px;">
-                                    @*    @if (hour % 2 == 0)
-                            { *@
-                                    @if (hour == 0 || hour == 12)
-                                    {
-                                        <MudText Align="Align.Center">
-                                            12
-                                        </MudText>
-                                    }
-                                    else if (hour < 12)
-                                    {
-                                        <MudText Align="Align.Center">
-
-                                            @hour
-                                        </MudText>
-
-                                    }
-                                    else if (hour >= 12)
-                                    {
-                                        <MudText Align="Align.Center">
-
-                                        @(hour - 12)
-                                        </MudText>
-
-                                    }
-                                    @*  }
-                            else
+                                <MudText Align="Align.Center">
+                                    12
+                                </MudText>
+                            }
+                            else if (hour < 12)
                             {
-                            @("-")
-                            } *@
-                                </th>
+                                <MudText Align="Align.Center">
+
+                                    @hour
+                                </MudText>
 
                             }
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var day in Enum.GetValues<DayOfWeek>())
+                            else if (hour >= 12)
+                            {
+                                <MudText Align="Align.Center">
+
+                                    @(hour - 12)
+                                </MudText>
+
+                            }
+                            @*  }
+                    else
+                    {
+                    @("-")
+                    } *@
+                        </th>
+
+                    }
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (var day in Enum.GetValues<DayOfWeek>())
+                {
+                    <tr>
+                        <td>@AppLocalization[day.ToString()]</td>
+                        @foreach (var hour in Enumerable.Range(0, 24))
                         {
-                            <tr>
-                                <td>@AppLocalization[day.ToString()]</td>
-                                @foreach (var hour in Enumerable.Range(0, 24))
-                                {
-                                    <td @onmousedown="() => StartSelection(day, hour)"
-                                        @onmouseover="(e) => UpdateSelection(day, hour, e)"
-                                        @onmouseup="EndSelection"
-                                        class="ma-0 pa-0"
-                                        style="background-color:@(GetHourColor(day, hour))">
-                                    </td>
-                                }
-                            </tr>
+                            <td @onmousedown="() => StartSelection(day, hour)"
+                                @onmouseover="(e) => UpdateSelection(day, hour, e)"
+                                @onmouseup="EndSelection"
+                                class="ma-0 pa-0"
+                                style="background-color:@(GetHourColor(day, hour))">
+                            </td>
                         }
-                    </tbody>
-                </MudSimpleTable>
+                    </tr>
+                }
+            </tbody>
+        </MudSimpleTable>
 
 
     }
@@ -75,6 +75,7 @@
         await base.OnInitializedAsync();
         Modal.OnYes = SaveChanges;
         Modal.AllowClose = true;
+        Modal.YesEnabled = ()=> { return User.CanEditField(ActiveDirectoryFields.LogonHours); };
         Modal.YesText = AppLocalization["Save Changes"];
         Modal.Title = AppLocalization["Logon Hours"];
         schedule = User.LogonHours;
@@ -95,7 +96,10 @@
 
     private void ToggleHour(DayOfWeek day, int hour)
     {
-        schedule.ToggleHour(day, hour);
+        if (User.CanEditField(ActiveDirectoryFields.LogonHours))
+        {
+            schedule.ToggleHour(day, hour);
+        }
     }
 
     private void StartSelection(DayOfWeek day, int hour)
@@ -107,9 +111,12 @@
 
     private void UpdateSelection(DayOfWeek day, int hour, MouseEventArgs e)
     {
-        if (isSelecting)
+        if (User.CanEditField(ActiveDirectoryFields.LogonHours))
         {
-            schedule.SetLogonHour(day, hour, selectionValue);
+            if (isSelecting)
+            {
+                schedule.SetLogonHour(day, hour, selectionValue);
+            }
         }
     }
 
@@ -123,15 +130,5 @@
         return schedule.GetLogonHour(day, hour) ? "#4caf50" : "#f44336";
     }
 
-    private void SaveSchedule()
-    {
-        // Convert schedule to hex string and save it
-        // var logonHoursTool = new LogonHours();
-        // var logonHours = logonHoursTool.EncodeLogonHours(schedule);
-        // var hexString = logonHoursTool.ToHexString(logonHours);
-
-        // Display hex string or save it to a database
-        // Console.WriteLine($"Hex Value: {hexString}");
-    }
 
 }
