--- a/BLAZAMGui/UI/Settings/AvailableUpdate.razor
+++ b/BLAZAMGui/UI/Settings/AvailableUpdate.razor
@@ -29,6 +29,10 @@
 
                 }
             }
+            else if (Disabled)
+            {
+                <MudText>@DisabledMessage</MudText>
+            }
         </MudCard>
 
 
@@ -37,6 +41,8 @@
 @code {
     [Parameter]
     public ApplicationUpdate Update { get; set; }
+
+    private string DisabledMessage;
 
     [Parameter]
     public bool Disabled { get; set; } = false;
@@ -126,5 +132,23 @@
 
     private bool CurrentVersion => ApplicationInfo.RunningVersion.CompareTo(Update.Version) == 0;
 
+    protected override void OnInitialized()
+    {
+        base.OnInitialized();
+        if(Update.Version.NewerThan(new ApplicationVersion("0.9.99")))
+        {
+            if(PrerequisiteChecker.CheckForAspCore())
+            {
+                Disabled=true;
+                DisabledMessage = AppLocalization["ASP NET Core 8 Runtime is missing."];
+            }
+            if(PrerequisiteChecker.CheckForAspCoreHosting())
+            {
+                Disabled=true;
+                DisabledMessage = AppLocalization["ASP NET Core 8 Web Hosting Bundle is missing."];
+
+            }
+        }
+    }
 
 }
