--- a/BLAZAMGui/UI/Settings/UpdateSettings.razor
+++ b/BLAZAMGui/UI/Settings/UpdateSettings.razor
@@ -45,6 +45,14 @@
             }
 
         }
+        if (UpdateService.LatestUpdate.Disabled)
+        {
+            <MudStack Row=true>
+                <MudIcon Color=Color.Error Icon="@Icons.Material.Filled.Error" />
+                <MudText>@AppLocalization["Unable to update!"]</MudText>
+            </MudStack>
+            <MudText>@(UpdateService.LatestUpdate.DisabledMessage)</MudText>
+        }
         <SettingsField Label="@AppLocalization["Application Credentials"]">
 
             <MudTextField T="string" Label="@AppLocalization["Application Credentials"]" Disabled=true Value="@WindowsIdentity.GetCurrent().Name.ToString().Replace('_',' ')" />
