--- a/BLAZAMGui/UI/Settings/UpdateSettings.razor
+++ b/BLAZAMGui/UI/Settings/UpdateSettings.razor
@@ -45,7 +45,7 @@
             }
 
         }
-        if (UpdateService.LatestUpdate.PassesPrerequisiteChecks)
+        if (!UpdateService.LatestUpdate.PassesPrerequisiteChecks)
         {
             <MudStack Row=true>
                 <MudIcon Color=Color.Error Icon="@Icons.Material.Filled.Error" />
