--- a/BLAZAMEmailMessage/Email/Base/EmailSiteNavigation.razor
+++ b/BLAZAMEmailMessage/Email/Base/EmailSiteNavigation.razor
@@ -2,78 +2,8 @@
     <tbody>
         <tr>
             <td class="v-container-padding-padding" style="overflow-wrap:break-word;word-break:break-word;padding:10px;font-family:'Open Sans',sans-serif;" align="left">
-                <div class="menu" style="text-align:center">
-                    <!--[if (mso)|(IE)]>
-                    <table role="presentation" border="0" cellpadding="0" cellspacing="0" align="center">
-                       <tr>
-                          <![endif]-->
-                    <!--[if (mso)|(IE)]>
-                    <td style="padding:5px 15px">
-                       <![endif]-->
-                    <a href="https://www.unlayer.com" target="_self" style="padding:5px 15px;display:inline-block;color:#000000;font-size:14px;text-decoration:none" class="v-padding v-font-size">
-                        Home
-                    </a>
-                    <!--[if (mso)|(IE)]>
-                    </td>
-                    <![endif]-->
-                    <!--[if (mso)|(IE)]>
-                    <td style="padding:5px 15px">
-                       <![endif]-->
-                    <span style="padding:5px 15px;display:inline-block;color:#000000;font-size:14px;" class="v-padding v-font-size hide-mobile">
-                        |
-                    </span>
-                    <!--[if (mso)|(IE)]>
-                    </td>
-                    <![endif]-->
-                    <!--[if (mso)|(IE)]>
-                    <td style="padding:5px 15px">
-                       <![endif]-->
-                    <a href="https://www.unlayer.com" target="_self" style="padding:5px 15px;display:inline-block;color:#000000;font-size:14px;text-decoration:none" class="v-padding v-font-size">
-                        Page
-                    </a>
-                    <!--[if (mso)|(IE)]>
-                    </td>
-                    <![endif]-->
-                    <!--[if (mso)|(IE)]>
-                    <td style="padding:5px 15px">
-                       <![endif]-->
-                    <span style="padding:5px 15px;display:inline-block;color:#000000;font-size:14px;" class="v-padding v-font-size hide-mobile">
-                        |
-                    </span>
-                    <!--[if (mso)|(IE)]>
-                    </td>
-                    <![endif]-->
-                    <!--[if (mso)|(IE)]>
-                    <td style="padding:5px 15px">
-                       <![endif]-->
-                    <a href="https://www.unlayer.com" target="_self" style="padding:5px 15px;display:inline-block;color:#000000;font-size:14px;text-decoration:none" class="v-padding v-font-size">
-                        About Us
-                    </a>
-                    <!--[if (mso)|(IE)]>
-                    </td>
-                    <![endif]-->
-                    <!--[if (mso)|(IE)]>
-                    <td style="padding:5px 15px">
-                       <![endif]-->
-                    <span style="padding:5px 15px;display:inline-block;color:#000000;font-size:14px;" class="v-padding v-font-size hide-mobile">
-                        |
-                    </span>
-                    <!--[if (mso)|(IE)]>
-                    </td>
-                    <![endif]-->
-                    <!--[if (mso)|(IE)]>
-                    <td style="padding:5px 15px">
-                       <![endif]-->
-                    <a href="https://www.unlayer.com" target="_self" style="padding:5px 15px;display:inline-block;color:#000000;font-size:14px;text-decoration:none" class="v-padding v-font-size">
-                        Contact US
-                    </a>
-                    <!--[if (mso)|(IE)]>
-                    </td>
-                    <![endif]-->
-                    <!--[if (mso)|(IE)]>
-                       </tr>
-                    </table>
-                    <![endif]-->
+                <div class="menu" style="text-align:center; color:white;">
+                    Blazam
                 </div>
             </td>
         </tr>
